--- a/M183.UI/M183.UI.csproj
+++ b/M183.UI/M183.UI.csproj
@@ -80,6 +80,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Css\main.css" />
+    <Content Include="Css\normalize.css" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\Site.js" />
     <Content Include="Web.config" />
