--- a/M183.BusinessLogic/M183.BusinessLogic.csproj
+++ b/M183.BusinessLogic/M183.BusinessLogic.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\LoggedAccountViewModel.cs" />
+    <Compile Include="ViewModels\LoggedTextViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\M183.DataAccess\M183.DataAccess.csproj">
