--- a/M183.DataAccess/M183.DataAccess.csproj
+++ b/M183.DataAccess/M183.DataAccess.csproj
@@ -51,6 +51,11 @@
     <Compile Include="DatabaseContext.cs" />
     <Compile Include="LoggedAccount.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Document.cs" />
+    <Compile Include="Models\Permission.cs" />
+    <Compile Include="Models\PersonalDocument.cs" />
+    <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LoggedText.cs" />
   </ItemGroup>
