--- a/M183.BusinessLogic/M183.BusinessLogic.csproj
+++ b/M183.BusinessLogic/M183.BusinessLogic.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,9 @@
   <ItemGroup>
     <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\BusinessRole.cs" />
+    <Compile Include="Security\BusinessUser.cs" />
+    <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\LoggedAccountViewModel.cs" />
     <Compile Include="ViewModels\LoggedTextViewModel.cs" />
   </ItemGroup>
