--- a/M183.DataAccess/App.config
+++ b/M183.DataAccess/App.config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=M183.DataAccess.DatabaseContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DatabaseContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\jhan\Documents\Datenbank.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
