--- a/M183.UI/M183.UI.csproj
+++ b/M183.UI/M183.UI.csproj
@@ -142,6 +142,9 @@
     <Content Include="Views\Home\Feedback.cshtml" />
     <Content Include="Views\Tutorial\VigenereEncryption.cshtml" />
     <Content Include="Views\Tutorial\CesarEncryption.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Areas\User\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\User\Views\Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -154,7 +157,6 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Shared\" />
     <Folder Include="Areas\User\Models\" />
-    <Folder Include="Areas\User\Views\Shared\" />
     <Folder Include="Models\" />
     <Folder Include="Views\API\" />
   </ItemGroup>
