--- a/M183.DataAccess/M183.DataAccess.csproj
+++ b/M183.DataAccess/M183.DataAccess.csproj
@@ -51,7 +51,8 @@
     <Compile Include="DatabaseContext.cs" />
     <Compile Include="LoggedAccount.cs" />
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Configurations\Configuration.cs" />
+    <Compile Include="Models\Configurations\UserConfiguration.cs" />
+    <Compile Include="Models\Configurations\GlobalConfiguration.cs" />
     <Compile Include="Models\Configurations\LoginConfiguration.cs" />
     <Compile Include="Models\Document.cs" />
     <Compile Include="Models\Permission.cs" />
