--- a/M183.UI/Views/web.config
+++ b/M183.UI/Views/web.config
@@ -17,7 +17,9 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="M183.UI" />
+        <add namespace="M183.UI.Extensions" />
         <add namespace="M183.BusinessLogic.ViewModels" />
+        <add namespace="M183.BusinessLogic.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
