--- a/M183.BusinessLogic/M183.BusinessLogic.csproj
+++ b/M183.BusinessLogic/M183.BusinessLogic.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Models\AuthenticationMethod.cs" />
     <Compile Include="Models\BusinessUser.cs" />
     <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\UserActionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
