--- a/M183.BusinessLogic/M183.BusinessLogic.csproj
+++ b/M183.BusinessLogic/M183.BusinessLogic.csproj
@@ -50,8 +50,8 @@
   <ItemGroup>
     <Compile Include="Models\AuthenticationMethod.cs" />
     <Compile Include="Models\BusinessUser.cs" />
+    <Compile Include="Models\LogClass.cs" />
     <Compile Include="Models\Role.cs" />
-    <Compile Include="Models\UserActionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
