--- a/M183.BusinessLogic/M183.BusinessLogic.csproj
+++ b/M183.BusinessLogic/M183.BusinessLogic.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Models\BusinessUser.cs" />
     <Compile Include="Models\LogClass.cs" />
     <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\Status.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
