--- a/M183.UI/Areas/User/Views/web.config
+++ b/M183.UI/Areas/User/Views/web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="M183.UI" />
-        
+        <add namespace="M183.BusinessLogic.ViewModels" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
