Database connections are disposed right after each method's execution.

--- a/M183.UI/M183.UI.csproj
+++ b/M183.UI/M183.UI.csproj
@@ -119,7 +119,7 @@
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\User\Views\Dashboard\Index.cshtml" />
     <Content Include="Areas\User\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\User\Views\Post\AddPost.cshtml" />
+    <Content Include="Views\Post\AddPost.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
