--- a/M183.UI/M183.UI.csproj
+++ b/M183.UI/M183.UI.csproj
@@ -110,6 +110,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Security\AuthorizeAdmin.cs" />
+    <Compile Include="Security\AuthorizePostOwner.cs" />
+    <Compile Include="Security\AuthorizeUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
