--- a/M183.UI/M183.UI.csproj
+++ b/M183.UI/M183.UI.csproj
@@ -157,6 +157,7 @@
     <Content Include="Contents\Scripts\jquery-3.2.1.slim.min.map" />
     <Content Include="Contents\Scripts\jquery-3.2.1.min.map" />
     <Content Include="Views\Home\ApiTest.cshtml" />
+    <Content Include="Views\Post\EditPost.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
