--- a/M183.BusinessLogic/M183.BusinessLogic.csproj
+++ b/M183.BusinessLogic/M183.BusinessLogic.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Models\BusinessUser.cs" />
     <Compile Include="Models\DtoPost.cs" />
     <Compile Include="Models\LogClass.cs" />
+    <Compile Include="Models\PBKDF2Hash.cs" />
     <Compile Include="Models\PostStatusCode.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\UserStatusCode.cs" />
